--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.22.1",
     "mongoose": "^7.8.8",
     "multer": "^1.4.5-lts.1",
-    "node-telegram-bot-api": "^0.61.0"
+    "node-telegram-bot-api": "^0.61.0",
+    "cors": "^2.8.5"
   }
 }
